# AttendenceManagerBackend

./: .gitignore  Makefile  ReadMe.md  gunicorn.service  insert_test_data.py  logging.conf  main.py  notify.py  pyproject.toml  run.sh
alembic/: env.py
alembic/versions/: 9dd06a37220a_created_subjects_table.py
app/: __init__.py  __main__.py  config.py  logging.py
app/routers/: attendance.py  notification.py  subject_alias.py  timetable.py
app/utils/: __init__.py  attendance_manager.py  attendance_updater.py  data_models.py  database.py  email_sender.py  models.py  notifications.py  schemas.py  update_attendence_database.py
experiments/: automate_website.ipynb  insert_test_data.py  notify.py
