[tool.poetry]
name = "attendencemanager-backend"
version = "0.1.0"
description = ""
authors = ["Mayank Sharma <sharmayank1608@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
bs4 = "^0.0.2"
pytesseract = "^0.3.13"
fastapi = "^0.114.1"
requests = "^2.32.3"
pandas = "^2.2.2"
lxml = "^5.3.0"
uvicorn = "^0.30.6"
httpx = "^0.27.2"
psycopg2-binary = "^2.9.9"
pymongo = "^4.8.0"
python-dotenv = "^1.0.1"
schedule = "^1.2.2"
pydantic = "^2.9.1"
alembic = "^1.13.2"
pydantic-settings = "^2.5.2"
azure-communication-email = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
